--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 # Site settings
 title:
-email:
+email: info@6g.org
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
+remote_theme: "6gorg/creative-theme-jekyll"
 twitter_username:
 github_username:
 
